more loc and civic changes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1056,17 +1056,18 @@
  # /
 
  # ------------------------------------------------- Archive curators
-	building_tec_archive:0 "Archives"
-	building_tec_archive_desc:0 "Archives preserves the culture and keeps the knowledge by indexing and transforming all data into accesible information."
+	building_tec_curator_archive_1:0 "Archives"
+	building_tec_curator_archive_1_plural:0 "Archives"
+	building_tec_curator_archive_1_desc:0 "Archives preserves the culture and keeps the knowledge by indexing and transforming all data into accesible information."
  
-	building_tec_archive_2:0 "Archive Complexes"
-	building_tec_archive_2_desc:0 "Upgraded Archives which host a large staff capacity and even more information available."
+	building_tec_curator_archive_2:0 "Archive Complexes"
+	building_tec_curator_archive_2_desc:0 "Upgraded Archives which host a large staff capacity and even more information available."
  
-	building_tec_archive_3:0 "Advanced Archive Complexes"
-	building_tec_archive_3_desc:0 "These advanced archive complexes have the very latest communication and science equipment along with an extremely large staff and information capacity."
+	building_tec_curator_archive_3:0 "Advanced Archive Complexes"
+	building_tec_curator_archive_3_desc:0 "These advanced archive complexes have the very latest communication and science equipment along with an extremely large staff and information capacity."
 
-	building_tec_archive_4:0 "Perfected Archive Complexes"
-	building_tec_archive_4_desc:0 "A wonder of technology and advancement, these archives automatically digitalizes info into accesible knowledge and has a vast amount of staff ready to intervene and index any possible new addition to their pool of knowledge."
+	building_tec_curator_archive_4:0 "Perfected Archive Complexes"
+	building_tec_curator_archive_4_desc:0 "A wonder of technology and advancement, these archives automatically digitalizes info into accesible knowledge and has a vast amount of staff ready to intervene and index any possible new addition to their pool of knowledge."
 
 	job_tec_grand_archivist:0 "Keeper of Knowledge"
 	job_tec_grand_archivist_plural:0 "Keepers of Knowledge"
@@ -1085,10 +1086,12 @@
 	mod_job_tec_minor_archivist_add:0 "$job_tec_minor_archivist$ Jobs"
  # /
  # ------------------------------------------------- Lodge of the occult
-	building_tec_lodge:0 "Lodge"
-	building_tec_lodge_desc:0 "A relatively hidden and secret place where the most occult rituals and technologies are researched and discussed between initiates, experts and lodge leaders"
-	building_tec_advanced_lodge:0 "Magnum-Lodge"
-	building_tec_advanced_lodge_desc:0 "A heavily secret but relevant place where the heads of the Occult Lodge develop their schemes, focus on the technologies and coordinate with other lodges remotely."
+	building_tec_occultist_lodge_1:0 "Lodge"
+	building_tec_occultist_lodge_1_plural:0 "Lodges"
+	building_tec_occultist_lodge_1_desc:0 "A relatively hidden and secret place where the most occult rituals and technologies are researched and discussed between initiates, experts and lodge leaders"
+
+	building_tec_occultist_lodge_2:0 "Magnum-Lodge"
+	building_tec_occultist_lodge_2_desc:0 "A heavily secret but relevant place where the heads of the Occult Lodge develop their schemes, focus on the technologies and coordinate with other lodges remotely."
 
 	job_tec_grand_occultist:0 "Occultist"
 	job_tec_grand_occultist_plural:0 "Occultists"
