--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -205,17 +205,187 @@
 # /
 
 # Jobs
+ # Template
+	#concept_tec_ruler_job_TEMPLATE: "$job_TEMPLATE$"
+	#concept_tec_ruler_job_TEMPLATE_alias: "$job_TEMPLATE$"
+	#concept_tec_ruler_job_TEMPLATE_icon: "£job_TEMPLATE£ $job_TEMPLATE$"
+	#concept_tec_ruler_job_TEMPLATE_plural: "$job_TEMPLATE_plural$"
+	#concept_tec_ruler_job_TEMPLATE_plural_icon: "£job_TEMPLATE£ $job_TEMPLATE_plural$"
+	#concept_tec_ruler_job_TEMPLATE_desc: "$job_TEMPLATE_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+ # /
+ # Ruler
+	concept_tec_ruler_job_commandante: "$job_commandante$"
+	concept_tec_ruler_job_commandante_alias: "$job_commandante$"
+	concept_tec_ruler_job_commandante_icon: "£job_commandante£ $job_commandante$"
+	concept_tec_ruler_job_commandante_plural: "$job_commandante_plural$"
+	concept_tec_ruler_job_commandante_plural_icon: "£job_commandante£ $job_commandante_plural$"
+	concept_tec_ruler_job_commandante_desc: "§L$job_commandante_desc$§!\n\n$job_commandante_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_supervisor_bureaucrat: "$job_supervisor_bureaucrat$"
+	concept_tec_ruler_job_supervisor_bureaucrat_alias: "$job_supervisor_bureaucrat$"
+	concept_tec_ruler_job_supervisor_bureaucrat_icon: "£job_supervisor_bureaucrat£ $job_supervisor_bureaucrat$"
+	concept_tec_ruler_job_supervisor_bureaucrat_plural: "$job_supervisor_bureaucrat_plural$"
+	concept_tec_ruler_job_supervisor_bureaucrat_plural_icon: "£job_supervisor_bureaucrat£ $job_supervisor_bureaucrat_plural$"
+	concept_tec_ruler_job_supervisor_bureaucrat_desc: "§L$job_supervisor_bureaucrat_desc$§!\n\n$job_supervisor_bureaucrat_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_grand_archivist: "$job_tec_grand_archivist$"
+	concept_tec_ruler_job_tec_grand_archivist_alias: "$job_tec_grand_archivist$"
+	concept_tec_ruler_job_tec_grand_archivist_icon: "£job_tec_grand_archivist£ $job_tec_grand_archivist$"
+	concept_tec_ruler_job_tec_grand_archivist_plural: "$job_tec_grand_archivist_plural$"
+	concept_tec_ruler_job_tec_grand_archivist_plural_icon: "£job_tec_grand_archivist£ $job_tec_grand_archivist_plural$"
+	concept_tec_ruler_job_tec_grand_archivist_desc: "§L$job_tec_grand_archivist_desc$§!\n\n$job_tec_grand_archivist_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_high_priest: "$job_high_priest$"
+	concept_tec_ruler_job_high_priest_alias: "$job_high_priest$"
+	concept_tec_ruler_job_high_priest_icon: "£job_high_priest£ $job_high_priest$"
+	concept_tec_ruler_job_high_priest_plural: "$job_high_priest_plural$"
+	concept_tec_ruler_job_high_priest_plural_icon: "£job_high_priest£ $job_high_priest_plural$"
+	concept_tec_ruler_job_high_priest_desc: "§L$job_high_priest_desc$§!\n\n$job_high_priest_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_grand_occultist: "$job_tec_grand_occultist$"
+	concept_tec_ruler_job_tec_grand_occultist_alias: "$job_tec_grand_occultist$"
+	concept_tec_ruler_job_tec_grand_occultist_icon: "£job_tec_grand_occultist£ $job_tec_grand_occultist$"
+	concept_tec_ruler_job_tec_grand_occultist_plural: "$job_tec_grand_occultist_plural$"
+	concept_tec_ruler_job_tec_grand_occultist_plural_icon: "£job_tec_grand_occultist£ $job_tec_grand_occultist_plural$"
+	concept_tec_ruler_job_tec_grand_occultist_desc: "§L$job_tec_grand_occultist_desc$§!\n\n$job_tec_grand_occultist_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_technocrat: "$job_tec_technocrat$"
+	concept_tec_ruler_job_tec_technocrat_alias: "$job_tec_technocrat$"
+	concept_tec_ruler_job_tec_technocrat_icon: "£job_tec_technocrat£ $job_tec_technocrat$"
+	concept_tec_ruler_job_tec_technocrat_plural: "$job_tec_technocrat_plural$"
+	concept_tec_ruler_job_tec_technocrat_plural_icon: "£job_tec_technocrat£ $job_tec_technocrat_plural$"
+	concept_tec_ruler_job_tec_technocrat_desc: "§L$job_tec_technocrat_desc$§!\n\n$job_tec_technocrat_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_head_researcher: "$job_head_researcher$"
+	concept_tec_ruler_job_head_researcher_alias: "$job_head_researcher$"
+	concept_tec_ruler_job_head_researcher_icon: "£job_researcher£ $job_head_researcher$"
+	concept_tec_ruler_job_head_researcher_plural: "$job_head_researcher_plural$"
+	concept_tec_ruler_job_head_researcher_plural_icon: "£job_researcher£ $job_head_researcher_plural$"
+	concept_tec_ruler_job_head_researcher_desc: "§L$job_head_researcher_desc$§!\n\n$job_head_researcher_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_mogul: "$job_mogul$"
+	concept_tec_ruler_job_mogul_alias: "$job_mogul$"
+	concept_tec_ruler_job_mogul_icon: "£job_mogul£ $job_mogul$"
+	concept_tec_ruler_job_mogul_plural: "$job_mogul_plural$"
+	concept_tec_ruler_job_mogul_plural_icon: "£job_mogul£ $job_mogul_plural$"
+	concept_tec_ruler_job_mogul_desc: "§L$job_mogul_desc$§!\n\n$job_mogul_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_master_tinker: "$job_tec_master_tinker$"
+	concept_tec_ruler_job_tec_master_tinker_alias: "$job_tec_master_tinker$"
+	concept_tec_ruler_job_tec_master_tinker_icon: "£job_tec_master_tinker£ $job_tec_master_tinker$"
+	concept_tec_ruler_job_tec_master_tinker_plural: "$job_tec_master_tinker_plural$"
+	concept_tec_ruler_job_tec_master_tinker_plural_icon: "£job_tec_master_tinker£ $job_tec_master_tinker_plural$"
+	concept_tec_ruler_job_tec_master_tinker_desc: "§L$job_tec_master_tinker_desc$§!\n\n$job_tec_master_tinker_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_noble: "$job_noble$"
+	concept_tec_ruler_job_noble_alias: "$job_noble$"
+	concept_tec_ruler_job_noble_icon: "£job_noble£ $job_noble$"
+	concept_tec_ruler_job_noble_plural: "$job_noble_plural$"
+	concept_tec_ruler_job_noble_plural_icon: "£job_noble£ $job_noble_plural$"
+	concept_tec_ruler_job_noble_desc: "§L$job_noble_desc$§!\n\n$job_noble_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_procurator: "$job_tec_procurator$"
+	concept_tec_ruler_job_tec_procurator_alias: "$job_tec_procurator$"
+	concept_tec_ruler_job_tec_procurator_icon: "£job_tec_procurator£ $job_tec_procurator$"
+	concept_tec_ruler_job_tec_procurator_plural: "$job_tec_procurator_plural$"
+	concept_tec_ruler_job_tec_procurator_plural_icon: "£job_tec_procurator£ $job_tec_procurator_plural$"
+	concept_tec_ruler_job_tec_procurator_desc: "§L$job_tec_procurator_desc$§!\n\n$job_tec_procurator_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_high_overseer: "$job_tec_high_overseer$"
+	concept_tec_ruler_job_tec_high_overseer_alias: "$job_tec_high_overseer$"
+	concept_tec_ruler_job_tec_high_overseer_icon: "£job_tec_high_overseer£ $job_tec_high_overseer$"
+	concept_tec_ruler_job_tec_high_overseer_plural: "$job_tec_high_overseer_plural$"
+	concept_tec_ruler_job_tec_high_overseer_plural_icon: "£job_tec_high_overseer£ $job_tec_high_overseer_plural$"
+	concept_tec_ruler_job_tec_high_overseer_desc: "§L$job_tec_high_overseer_desc$§!\n\n$job_tec_high_overseer_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_inquisitor: "$job_tec_inquisitor$"
+	concept_tec_ruler_job_tec_inquisitor_alias: "$job_tec_inquisitor$"
+	concept_tec_ruler_job_tec_inquisitor_icon: "£job_tec_inquisitor£ $job_tec_inquisitor$"
+	concept_tec_ruler_job_tec_inquisitor_plural: "$job_tec_inquisitor_plural$"
+	concept_tec_ruler_job_tec_inquisitor_plural_icon: "£job_tec_inquisitor£ $job_tec_inquisitor_plural$"
+	concept_tec_ruler_job_tec_inquisitor_desc: "§L$job_tec_inquisitor_desc$§!\n\n$job_tec_inquisitor_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_senator: "$job_tec_senator$"
+	concept_tec_ruler_job_tec_senator_alias: "$job_tec_senator$"
+	concept_tec_ruler_job_tec_senator_icon: "£job_tec_senator£ $job_tec_senator$"
+	concept_tec_ruler_job_tec_senator_plural: "$job_tec_senator_plural$"
+	concept_tec_ruler_job_tec_senator_plural_icon: "£job_tec_senator£ $job_tec_senator_plural$"
+	concept_tec_ruler_job_tec_senator_desc: "§L$job_tec_senator_desc$§!\n\n$job_tec_senator_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_high_medical: "$job_tec_high_medical$"
+	concept_tec_ruler_job_tec_high_medical_alias: "$job_tec_high_medical$"
+	concept_tec_ruler_job_tec_high_medical_icon: "£job_tec_high_medical£ $job_tec_high_medical$"
+	concept_tec_ruler_job_tec_high_medical_plural: "$job_tec_high_medical_plural$"
+	concept_tec_ruler_job_tec_high_medical_plural_icon: "£job_tec_high_medical£ $job_tec_high_medical_plural$"
+	concept_tec_ruler_job_tec_high_medical_desc: "§L$job_tec_high_medical_desc$§!\n\n$job_tec_high_medical_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_high_cultivator: "$job_tec_high_cultivator$"
+	concept_tec_ruler_job_tec_high_cultivator_alias: "$job_tec_high_cultivator$"
+	concept_tec_ruler_job_tec_high_cultivator_icon: "£job_tec_high_cultivator£ $job_tec_high_cultivator$"
+	concept_tec_ruler_job_tec_high_cultivator_plural: "$job_tec_high_cultivator_plural$"
+	concept_tec_ruler_job_tec_high_cultivator_plural_icon: "£job_tec_high_cultivator£ $job_tec_high_cultivator_plural$"
+	concept_tec_ruler_job_tec_high_cultivator_desc: "§L$job_tec_high_cultivator_desc$§!\n\n$job_tec_high_cultivator_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_chemical_baron: "$job_tec_chemical_baron$"
+	concept_tec_ruler_job_tec_chemical_baron_alias: "$job_tec_chemical_baron$"
+	concept_tec_ruler_job_tec_chemical_baron_icon: "£job_tec_chemical_baron£ $job_tec_chemical_baron$"
+	concept_tec_ruler_job_tec_chemical_baron_plural: "$job_tec_chemical_baron_plural$"
+	concept_tec_ruler_job_tec_chemical_baron_plural_icon: "£job_tec_chemical_baron£ $job_tec_chemical_baron_plural$"
+	concept_tec_ruler_job_tec_chemical_baron_desc: "§L$job_tec_chemical_baron_desc$§!\n\n$job_tec_chemical_baron_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_arcane_crafter: "$job_tec_arcane_crafter$"
+	concept_tec_ruler_job_tec_arcane_crafter_alias: "$job_tec_arcane_crafter$"
+	concept_tec_ruler_job_tec_arcane_crafter_icon: "£job_tec_arcane_crafter£ $job_tec_arcane_crafter$"
+	concept_tec_ruler_job_tec_arcane_crafter_plural: "$job_tec_arcane_crafter_plural$"
+	concept_tec_ruler_job_tec_arcane_crafter_plural_icon: "£job_tec_arcane_crafter£ $job_tec_arcane_crafter_plural$"
+	concept_tec_ruler_job_tec_arcane_crafter_desc: "§L$job_tec_arcane_crafter_desc$§!\n\n$job_tec_arcane_crafter_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	#concept_tec_ruler_job_BASE: "$job_BASE$"
+	#concept_tec_ruler_job_BASE_alias: "$job_BASE$"
+	#concept_tec_ruler_job_BASE_icon: "£job_BASE£ $job_BASE$"
+	#concept_tec_ruler_job_BASE_plural: "$job_BASE_plural$"
+	#concept_tec_ruler_job_BASE_plural_icon: "£job_BASE£ $job_BASE_plural$"
+	#concept_tec_ruler_job_BASE_desc: "§L$job_BASE_desc$§!\n\n$job_BASE_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+ # /
+ # Specialist
+	concept_tec_specialist_job_tec_minor_archivist: "$job_tec_minor_archivist$"
+	concept_tec_specialist_job_tec_minor_archivist_alias: "$job_tec_minor_archivist$"
+	concept_tec_specialist_job_tec_minor_archivist_icon: "£job_tec_minor_archivist£ $job_tec_minor_archivist$"
+	concept_tec_specialist_job_tec_minor_archivist_plural: "$job_tec_minor_archivist_plural$"
+	concept_tec_specialist_job_tec_minor_archivist_plural_icon: "£job_tec_minor_archivist£ $job_tec_minor_archivist_plural$"
+	concept_tec_specialist_job_tec_minor_archivist_desc: "§L$job_tec_minor_archivist_desc$§!\n\n$job_tec_minor_archivist_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_minor_occultist: "$job_tec_minor_occultist$"
+	concept_tec_specialist_job_tec_minor_occultist_alias: "$job_tec_minor_occultist$"
+	concept_tec_specialist_job_tec_minor_occultist_icon: "£job_tec_minor_occultist£ $job_tec_minor_occultist$"
+	concept_tec_specialist_job_tec_minor_occultist_plural: "$job_tec_minor_occultist_plural$"
+	concept_tec_specialist_job_tec_minor_occultist_plural_icon: "£job_tec_minor_occultist£ $job_tec_minor_occultist_plural$"
+	concept_tec_specialist_job_tec_minor_occultist_desc: "§L$job_tec_minor_occultist_desc$§!\n\n$job_tec_minor_occultist_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+
+ # /
+ # Worker
+
+	concept_tec_worker_job_tec_peasant: "$job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_alias: "$job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_icon: "£job_tec_peasant£ $job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_plural: "$job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_plural_icon: "£job_tec_peasant£ $job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+ # /
+ # Unsorted
 	concept_tec_job_angler: "$job_angler$"
 	concept_tec_job_angler_icon: "£job_angler£ $job_angler$"
 	concept_tec_job_angler_plural: "$job_angler_plural$"
 	concept_tec_job_angler_plural_icon: "£job_angler£ $job_angler_plural$"
-	concept_tec_job_angler_desc: "Stratum: §Y$pop_cat_worker$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£food£ 8§!" 
+	concept_tec_job_angler_desc: "Stratum: §Y$pop_cat_worker$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£food£ 8§!"
 
 	concept_tec_job_tec_reef_miner: "$tec_reef_miner$"
 	concept_tec_job_tec_reef_miner_icon: "£job_tec_reef_miner£ $tec_reef_miner$"
 	concept_tec_job_tec_reef_miner_plural: "$tec_reef_miner_plural$"
 	concept_tec_job_tec_reef_miner_plural_icon: "£job_tec_reef_miner£ $tec_reef_miner_plural$"
-	concept_tec_job_tec_reef_miner_desc: "Stratum: §Y$pop_cat_worker$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£minerals£ 6§!" 
+	concept_tec_job_tec_reef_miner_desc: "Stratum: §Y$pop_cat_worker$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£minerals£ 6§!"
 
 	concept_tec_job_pearl_diver: "$job_pearl_diver$"
 	concept_tec_job_pearl_diver_icon: "£job_pearl_diver£ $job_pearl_diver$"
@@ -227,43 +397,43 @@
 	concept_tec_job_pearl_diver_lithoid_icon: "£job_pearl_diver£ $job_pearl_diver$"
 	concept_tec_job_pearl_diver_lithoid_plural: "$job_pearl_diver_plural$"
 	concept_tec_job_pearl_diver_lithoid_plural_icon: "£job_pearl_diver£ $job_pearl_diver_plural$"
-	concept_tec_job_pearl_diver_lithoid_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!" 
+	concept_tec_job_pearl_diver_lithoid_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!"
 
 	concept_tec_job_tec_aqua_drone: "$job_tec_aqua_drone$"
 	concept_tec_job_tec_aqua_drone_icon: "£job_tec_aqua_drone£ $job_tec_aqua_drone$"
 	concept_tec_job_tec_aqua_drone_plural: "$job_tec_aqua_drone_plural$"
 	concept_tec_job_tec_aqua_drone_plural_icon: "£job_tec_aqua_drone£ $job_tec_aqua_drone_plural$"
-	concept_tec_job_tec_aqua_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities$: §G+2§!\nProduces: §Y£food£ 8§!" 
+	concept_tec_job_tec_aqua_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities$: §G+2§!\nProduces: §Y£food£ 8§!"
 
 	concept_tec_job_tec_reef_drone: "$job_tec_reef_drone$"
 	concept_tec_job_tec_reef_drone_icon: "£job_tec_reef_drone£ $job_tec_reef_drone$"
 	concept_tec_job_tec_reef_drone_plural: "$job_tec_reef_drone_plural$"
 	concept_tec_job_tec_reef_drone_plural_icon: "£job_tec_reef_drone£ $job_tec_reef_drone_plural$"
-	concept_tec_job_tec_reef_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities$: §G+2§!\nProduces: §Y£minerals£ 6§!" 
+	concept_tec_job_tec_reef_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities$: §G+2§!\nProduces: §Y£minerals£ 6§!"
 
 	concept_tec_job_tec_depth_drone: "$job_tec_depth_drone$"
 	concept_tec_job_tec_depth_drone_icon: "£job_tec_depth_drone£ $job_tec_depth_drone$"
 	concept_tec_job_tec_depth_drone_plural: "$job_tec_depth_drone_plural$"
 	concept_tec_job_tec_depth_drone_plural_icon: "£job_tec_depth_drone£ $job_tec_depth_drone_plural$"
-	concept_tec_job_tec_depth_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nDeviancy: §G-10§!\n$tec_loc_pop_growth$: §G+0.25%§!\nUpkeep: §Y£food£ 2§!" 
+	concept_tec_job_tec_depth_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nDeviancy: §G-10§!\n$tec_loc_pop_growth$: §G+0.25%§!\nUpkeep: §Y£food£ 2§!"
 
 	concept_tec_job_tec_depth_drone_lithoid: "$job_tec_depth_drone$"
 	concept_tec_job_tec_depth_drone_lithoid_icon: "£job_tec_depth_drone£ $job_tec_depth_drone$"
 	concept_tec_job_tec_depth_drone_lithoid_plural: "$job_tec_depth_drone_plural$"
 	concept_tec_job_tec_depth_drone_lithoid_plural_icon: "£job_tec_depth_drone£ $job_tec_depth_drone_plural$"
-	concept_tec_job_tec_depth_drone_lithoid_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nDeviancy: §G-10§!\n$tec_loc_pop_growth$: §G+0.25%§!\nUpkeep: §Y£minerals£ 2§!" 
+	concept_tec_job_tec_depth_drone_lithoid_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nDeviancy: §G-10§!\n$tec_loc_pop_growth$: §G+0.25%§!\nUpkeep: §Y£minerals£ 2§!"
 
 	concept_tec_job_tec_thermogenerator_drone: "$job_tec_thermogenerator_drone$"
 	concept_tec_job_tec_thermogenerator_drone_icon: "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone$"
 	concept_tec_job_tec_thermogenerator_drone_plural: "$job_tec_thermogenerator_drone_plural$"
 	concept_tec_job_tec_thermogenerator_drone_plural_icon: "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
-	concept_tec_job_tec_thermogenerator_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities_gestalt$: §G+2§!\nProduces: §Y£energy£ 8§!" 
+	concept_tec_job_tec_thermogenerator_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities_gestalt$: §G+2§!\nProduces: §Y£energy£ 8§!"
 
 	concept_tec_job_tec_hydrorelay_drone: "$job_tec_hydrorelay_drone$"
 	concept_tec_job_tec_hydrorelay_drone_icon: "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone$"
 	concept_tec_job_tec_hydrorelay_drone_plural: "$job_tec_hydrorelay_drone_plural$"
 	concept_tec_job_tec_hydrorelay_drone_plural_icon: "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone_plural$"
-	concept_tec_job_tec_hydrorelay_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\n$tec_loc_amenities_gestalt$: §G+4§!\nProduces: §Y£physics_research£ 6§!" 
+	concept_tec_job_tec_hydrorelay_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\n$tec_loc_amenities_gestalt$: §G+4§!\nProduces: §Y£physics_research£ 6§!"
 
 	# Foundry
 	concept_tec_job_foundry: "$job_foundry$"
@@ -444,6 +614,7 @@
 	concept_tec_job_manager_plural: "$job_manager_plural$"
 	concept_tec_job_manager_plural_icon: "£job_manager£ $job_manager_plural$"
 	concept_tec_job_manager_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+ # /
 # /
 
 ## Buildings
