Loc changes + natural sync mini rework

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -6,7 +6,7 @@
 
 	trait_tec_lithoid_sedimentary:0 "Sedimentary Aggregation"
 	trait_tec_lithoid_sedimentary_desc:0 "§LThis Lithoid species is generally composed by the selective aggregation of inert material around an evergrowing core, that also adapt itself to produce offspring in the same manner.§!\n"
-	TRAIT_TEC_LITHOID_SEDIMENTARY_EFFECT:0 "New colonies will have up to §Y5§! extra £blocker£ Lithoid Blockers that can be cleared for additional §YLithoid Pops§!.\nEach pop produces 0.1 £job_tec_cloner£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
+	TRAIT_TEC_LITHOID_SEDIMENTARY_EFFECT:0 "New colonies will have up to §Y3§! extra £blocker£ Lithoid Blockers that can be cleared for additional §YLithoid Pops§!.\nEach pop produces 0.1 £job_tec_cloner£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
 
 	# Additional unique traits
 	trait_tec_cryptobiotic:0 "Cryptobiosis"
@@ -222,6 +222,7 @@
 
 	trait_tec_natural_sync:0 "Natural Synchrony"
 	trait_tec_natural_sync_desc:0 "§LThis species thrives in Perfect Worlds, knowing each kind of species and constantly caring each minimum aspect of the world, giving a innate ability to communicate with the planet itself, and benefit from it's goods. If separated from such natural wonders, it suffers immensely in both physical and psychological ways.§!"
+	trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth_icon$ Pop Growth and Assembly on Perfect Planets: §G+10%§!\n$mod_perfect_planet_jobs_produces_mult$ per pop: §G+0.25%§!\n\nThe §H$ap_world_shaper$§! Ascension Perk amplifies this trait's effects.\nThese effects are §RInverted§! on £planet£ §YNon-Perfect Worlds§!"
 
 	trait_tec_natural_sync_bad:0 "Natural Synchrony"
 	trait_tec_natural_sync_bad_desc:0 "§LThis species thrives in Gaia Worlds, suffering a tremendous hit to their development outside such natural wonders.§!"
