--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2770,7 +2770,7 @@
 		district_tec_machine_arcology_assembly_plural:0 "$district_tec_machine_assembly$s"
 		district_tec_machine_arcology_assembly_desc:0 "TO DO"
 
-		district_tec_machine_arcology_cloning:0 "Recreation Line"
+		district_tec_machine_arcology_cloning:0 "Genesis Line"
 		district_tec_machine_arcology_cloning_plural:0 "$district_tec_machine_cloning$s"
 		district_tec_machine_arcology_cloning_desc:0 "TO DO"
 	# /
@@ -2800,7 +2800,7 @@
  # /
  # ------------------------------------------------- Hive World
 	district_tec_hive_arcology_housing:0 "Dwelling Chambers"
-	district_tec_hive_arcology_housing_plural:0 "$district_tec_hive_arcology_maintenance$s"
+	district_tec_hive_arcology_housing_plural:0 "$district_tec_hive_arcology_housing$s"
 	district_tec_hive_arcology_housing_desc:0 "TO DO"
 	# Group 0
 		district_tec_hive_arcology_assembly:0 "Gestation Chambers"
@@ -3501,6 +3501,7 @@
 	mod_tec_planet_building_build_speed_mult_per_pop:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ from £pop£ Pops"
 	mod_tec_planet_psionic_jobs_produces_mult_per_pop:0 "$mod_planet_psionic_jobs_produces_mult$ from £pop£ Pops"
 	mod_tec_planet_jobs_produces_mult_per_pop:0 "$mod_planet_jobs_produces_mult$ from £pop£ Pops"
+	mod_tec_perfect_planet_jobs_produces_mult_per_pop:0 "$mod_perfect_planet_jobs_produces_mult$ from £pop£ Pops"
 	mod_tec_planet_stability_add_per_pop: "$tec_loc_stability$ from £pop£ Pops"
 # Self-assembly
 	mod_tec_planet_pop_assembly_organic_add_per_pop:0 "Monthly Organic Pop Assembly from £pop£ Pops"
