--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -41,6 +41,38 @@
   concept_tec_authority_type_gestalt_desc: "Gestalt Consciousness type authorities are usually characterized by having some kind of collective consciousness or mind emerging from the population, be it biological, mechanical or artificial in nature, said population lacking free will.\n\nAuthorities: §Y$auth_hive_mind$§!, §Y$auth_tec_hive_cybernetic$§!, §Y$auth_tec_hive_biological$§!, §Y$auth_machine_intelligence$§!, §Y$auth_ancient_machine_intelligence$§!"
 # /
 
+# Civic things (move to civics_l)
+	tec_loc_c_ruler_swap:0 "§ERuler Swap:§!"
+	tec_loc_c_ruler_add:0 "§EUnlocks Ruler:§!"
+	tec_loc_c_unlocks_feature:0 "§EUnlocks Feature:§!"
+	tec_loc_c_leader_bonus:0 "§ELeader Bonus:§!"
+
+	tec_loc_c_unlocks_trait:0 "§EUnlocks Trait:§!"
+
+	tec_loc_c_unlocks_building:0 "§EUnlocks Building:§!"
+	tec_loc_c_unlocks_holding:0 "§EUnlocks Holding:§!"
+
+	tec_loc_c_replaces_job:0 "§EReplaces Job:§!"
+	tec_loc_c_unlocks_job:0 "§EUnlocks Job:§!"
+	tec_loc_c_improves_job:0 "§EEnhances Job:§!"
+	tec_loc_c_alters_job:0 "§EEnhances Job:§!"
+
+	tec_loc_c_forced_standard:0 "§EForced Living Standard:§!"
+	tec_loc_c_unlocks_standard:0 "§EUnlocks Living Standard:§!"
+
+	tec_loc_c_unlocks_ship:0 "§EUnlocks Ship Type:§!"
+
+	tec_loc_c_detection_bonus:0 "§EDetection Bonus:§!"
+
+	tec_loc_c_initial_pick:0 "§EInitial pick bonus:§!"
+
+	tec_loc_c_restriction:0 "§ERestriction:§!"
+
+	tec_loc_c_warning:0 "§E£trigger_tec_warning£ Warning:§!"
+
+	tec_loc_c_modifiers:0 "§EModifiers:§!"
+# /
+
 # Civic types
 	concept_tec_origin_civic: "Origin Civic"
 	concept_tec_origin_civics: "Origin Civics"
@@ -213,6 +245,14 @@
 	#concept_tec_ruler_job_TEMPLATE_plural_icon: "£job_TEMPLATE£ $job_TEMPLATE_plural$"
 	#concept_tec_ruler_job_TEMPLATE_desc: "$job_TEMPLATE_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
  # /
+ # Generic
+	concept_tec_ruler_job_standard: "Standard Ruler"
+	concept_tec_ruler_job_standard_alias: "Standard Ruler"
+	concept_tec_ruler_job_standard_icon: "£job_politician£ Standard Ruler"
+	concept_tec_ruler_job_standard_plural: "Standard Rulers"
+	concept_tec_ruler_job_standard_plural_icon: "£job_politician£ Standard Rulers"
+	concept_tec_ruler_job_standard_desc: "§LStandard Rulers are rulers provided based on the authority and other factors, related to the base operations of the empire, acting as politicians, administrators, managers, etc.§!\n\nStandard ruler jobs tend to produce §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+ # /
  # Ruler
 	concept_tec_ruler_job_commandante: "$job_commandante$"
 	concept_tec_ruler_job_commandante_alias: "$job_commandante$"
@@ -368,9 +408,9 @@
 
 	concept_tec_worker_job_tec_peasant: "$job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_alias: "$job_tec_peasant$"
-	concept_tec_worker_job_tec_peasant_icon: "£job_tec_peasant£ $job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_icon: "£job_slave_toiler£ $job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_plural: "$job_tec_peasant_plural$"
-	concept_tec_worker_job_tec_peasant_plural_icon: "£job_tec_peasant£ $job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
 	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
  # /
