--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -77,6 +77,8 @@
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_trade: "$tec_loc_trade_value$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
+	tec_loc_pop_growth_icon: "£mod_pop_growth_speed£"
+	tec_loc_job_output: "£job£ Output"
 
 	tec_loc_defense_armies:0 "£defense_army£ Defense Armies"
 
