more civic changes + at war/peace fixes

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -37,6 +37,7 @@
 	tec_loc_consumer_goods:0 "£consumer_goods£ $consumer_goods$"
 	tec_loc_cg:0 "$tec_loc_consumer_goods$"
 	tec_loc_unity:0 "£unity£ $unity$"
+	tec_loc_influence:0 "£influence£ $influence$"
 
 	tec_loc_alloys_and_energy:0 "$tec_loc_alloys$ and $tec_loc_energy$"
 	tec_loc_alloys_and_minerals:0 "$tec_loc_alloys$ and $tec_loc_minerals$"
