Planetary AI node fragmenting improvement

--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -1048,10 +1048,14 @@ factions.2000.desc.manufacturers:0 "As a result of bringing this faction into th
  tec_aiauth.210.desc:1 "As the AI Capacity deficit plagues our empire, [Owner.GetFinancialAdvisorAgencyCap] fades into a shadow of its former self. Once a beacon of foresight, it had forecasted the impending shortage, but its warnings were met with indifference. Neglected and starved of vital resources, the node's ability to provide accurate reports and feedback slowly deteriorated, its predictions obscured by a haze of errors.\n\nIn the wake of this catastrophic oversight, the ruling organics and the central AI Node grapple with the consequences of their inaction. With no alternative left, the central AI Node is forced to take drastic measures. The non-essential AI Nodes must be culled, downsizing the once-expansive AI Administration to a fraction of its former self. The burden now falls on the ordinary population to fill the void left behind, shouldering the responsibilities that were once entrusted to AI Nodes."
 
 # Fragmenting loc
-tec_aiauth.20.name: "AI Node Fragmentation"
+tec_aiauth.20.name: "Councilor AI Node Fragmentation"
 tec_aiauth.20.desc: "The nascent councilor AI Node is presented in front of the council, will it be up to the standards of both the People of §Y[This.GetName]§! and our §Y[This.GetRulerTitle]§!?"
 
-tec_aiauth.ethic.materialist: "Align with §Y$ethic_materialist$§! Ethic"
+tec_aiauth.21.name: "Planetary AI Node Fragmentation"
+tec_aiauth.21.desc: "$tec_aiauth.20.desc$"
+
+
+ tec_aiauth.ethic.materialist: "Align with §Y$ethic_materialist$§! Ethic"
 tec_aiauth.ethic.spiritualist: "Align with §Y$ethic_spiritualist$§! Ethic"
 tec_aiauth.ethic.egalitarian: "Align with §Y$ethic_egalitarian$§! Ethic"
 tec_aiauth.ethic.authoritarian: "Align with §Y$ethic_authoritarian$§! Ethic"
