--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1599,6 +1599,9 @@
 	leader_trait_tec_aiauth_superior_cybernetics_main_desc: "The AI Node and organics achieve a profound coupling, enabling a convergence of insights. Through this intricate connection, the AI Node gains the ability to peer into the depths of organic perspectives, while organics gain a glimpse into the vast computational intelligence of the AI Node. This mutual exchange of understanding fosters a harmonious synergy, unlocking new realms of knowledge and paving the way for unprecedented collaboration and innovation."
 	leader_trait_tec_aiauth_superior_cybernetics_main_master_roboticist_bonus: "$tec_loc_sr_tec_ai_power$ from £job_tec_master_roboticist£ $job_tec_master_roboticist_plural$, affected by scaling: §G+2§!"
 
+	leader_trait_tec_aiauth_synthetic: "Synthetic Interface"
+	leader_trait_tec_aiauth_synthetic_desc: "The AI Node gains the ability to interface and communicate with synthetic units, fostering a symbiotic relationship that enhances the overall efficiency and synergy between artificial and synthetic intelligence. Simultaneously, synthetic units establish a seamless connection with the centralized network of the main AI Node, enabling efficient data exchange and access to vast computational resources."
+
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor: "Negative Behavior Inhibitor"
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor_desc: "The AI Node incorporates a system for suppressing undesirable traits, imposing a higher upkeep to effectively restrain negative behaviors. Through this mechanism, the AI Node actively mitigates and curbs detrimental tendencies, fostering a more harmonious and productive environment within the empire without compromising its ethical boundaries."
 	# /
