first ascension changes batch + civic continuation

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -1753,11 +1753,14 @@ tech_reverse_advanced_dome: " "
 	tec_cybernetic_path.10050.b.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_research$"
 	tec_cybernetic_path.10050.c:0 "£job_foundry£ Industrial Grade: §HProduction§!"
 	tec_cybernetic_path.10050.c.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_industrial$"
+	tec_cybernetic_path.10050.d:0 "£job_unity£ Development Grade: §HCognitive§!"
+	tec_cybernetic_path.10050.d.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_unity$"
 
 	tec_cybernetic_path.10051.name:0 "Artificial Selection"
 	tec_cybernetic_path.10050.desc_versatility:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.a$\n$trait_tec_cybernetic_module_versatility$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
 	tec_cybernetic_path.10050.desc_research:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.b$\n$trait_tec_cybernetic_module_research$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
 	tec_cybernetic_path.10050.desc_industrial:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.c$\n$trait_tec_cybernetic_module_industrial$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
+	tec_cybernetic_path.10050.desc_unity:0 "We have selected the following Main Module, which is the following:\n$tec_cybernetic_path.10050.c$\n$trait_tec_cybernetic_module_unity$\n\nWe can change our decision before producing it in masse, as there will be no going back until we develop further technology to modify our Main Module."
 	tec_cybernetic_path.10051.a:0 "We should §YReconsider§!"
 	tec_cybernetic_path.10051.a.tooltip:0 "We will pick again the Main Cybernetic Module"
 	tec_cybernetic_path.10051.b:0 "§YConfirm§! the Main Module"
@@ -2762,7 +2765,7 @@ tech_reverse_advanced_dome: " "
 	tec_biopsionic_path.30040.a.psionics:0 "Inner power, inner growth"
 	tec_biopsionic_path.30040.a.psionics.tooltip:0 "The §YGrowth Penalty§! inherited by psionic capacities will be §GConverted§! into §GExtra Production§!."
 	tec_biopsionic_path.30040.b.genetics:0 "We will shape our very selves"
-	tec_biopsionic_path.30040.b.genetics.tooltip:0 "The §YGrowth Penalty§! inherited by psionic capacities will be §GInverted§! into §GPositive Growth bonuses§!."
+	tec_biopsionic_path.30040.b.genetics.tooltip:0 "The §YJob Upkeep§! inherited by psionic capacities will be §GInverted§! into §GPop Upkeep reduction§!."
 
 # 50% Pure of form/essence
 	tec_biopsionic_path.30050.name:0 "The Purest Form"
