--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1243,13 +1243,25 @@
 	mod_job_geoengineer_per_pop:0 "§G+1§! $job_geoengineer$ Job per $VALUE$ Pops"
 	mod_job_geoengineer_per_pop_short:0 "\n§G+1§! £mod_job_geoengineer_add£ per $VALUE$ £pop£"
 
-	job_druid:0 "Druid"
-	job_druid_plural:0 "Druids"
-	job_druid_desc:0 "As preachers of the natural cycle, these priests amend physical, spiritual and natural wounds, seeking balance between preservation of nature itself and social development."
-	job_druid_effect_desc:0 "£job_druid£ $job_druid_plural$ produce fair amount of §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and slightly increasing §YHabitability§!."
-	mod_job_druid_add:0 "$job_druid$ Jobs"
-	mod_job_druid_per_pop:0 "§G+1§! $job_druid$ Job per $VALUE$ Pops"
-	mod_job_druid_per_pop_short:0 "\n§G+1§! £mod_job_druid_add£ per $VALUE$ £pop£"
+	job_tec_druid:0 "Druid"
+	job_tec_druid_plural:0 "Druids"
+	job_tec_druid_desc:0 "As preachers of the natural cycle, these priests amend physical, spiritual and natural wounds, seeking balance between preservation of nature itself and social development."
+	job_tec_druid_effect_desc:0 "£job_tec_druid£ $job_tec_druid_plural$ produce fair amount of §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and slightly increasing §YHabitability§!."
+	mod_job_tec_druid_add:0 "$job_tec_druid$ Jobs"
+	mod_job_tec_druid_per_pop:0 "§G+1§! $job_tec_druid$ Job per $VALUE$ Pops"
+	mod_job_tec_druid_per_pop_short:0 "\n§G+1§! £mod_job_tec_druid_add£ per $VALUE$ £pop£"
+
+	building_tec_eco_environmentalist_center:0 "Ecological Center"
+	building_tec_eco_environmentalist_center_plural:0 "$building_tec_eco_environmentalist_center$s"
+	building_tec_eco_environmentalist_center_desc:0 "TO DO."
+
+	building_tec_eco_keepers_sphere:0 "Sanctified Ecosphere"
+	building_tec_eco_keepers_sphere_plural:0 "$building_tec_eco_keepers_sphere$s"
+	building_tec_eco_keepers_sphere_desc:0 "TO DO."
+
+	building_tec_eco_engineers_terrasculptor:0 "Terrasculpting Facility"
+	building_tec_eco_engineers_terrasculptor_plural:0 "Terrasculpting Facilities"
+	building_tec_eco_engineers_terrasculptor_desc:0 "TO DO."
  # /
  # ------------------------------------------------- Machine Cult (Feature)
 	building_tec_mecha_temple_1:0 "Mecha-Temple"
@@ -3005,7 +3017,7 @@
 	job_tec_reef_miner:0 "Litho-Reef Miner"
 	job_tec_reef_miner_plural:0 "Litho-Reef Miner"
 	job_tec_reef_miner_desc:0 "Using traditional cultivation techniques, these miners sow and extract rich parts of lithoreefs providing a nerverending stream of highly rich minerals."
-	job_tec_reef_miner_effect_desc:0 "['concept_tec_tec_reef_miner_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_trade_value$§!."
+	job_tec_reef_miner_effect_desc:0 "['concept_tec_job_tec_reef_miner_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_trade_value$§!."
 	mod_job_tec_reef_miner_add:0 "$job_tec_reef_miner$ Jobs"
 	mod_job_tec_reef_miner_per_pop:0 "§G+1§! $job_tec_reef_miner$ Job per $VALUE$ Pops"
 	mod_job_tec_reef_miner_per_pop_short:0 "\n§G+1§! £mod_job_tec_reef_drone_add£ per $VALUE$ £pop£"
