--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -376,13 +376,27 @@
 	leader_trait_psionic:0 "Psionic"
 	leader_trait_psionic_desc:1 "This leader possesses powerful psionic abilities."
 
+	mod_trait_tec_latent_psionic_tooltip:0 "[trait_tec_latent_psionic_bonuses]"
+	mod_trait_tec_psionic_tooltip:0 "[trait_tec_psionic_module_covenant][trait_tec_psionic_bonuses]"
+
+	# Modules
+	trait_tec_latent_psionic_module_fallback:0 "$MOD_POP_HAPPINESS$: §G+5%§!\n$mod_planet_jobs_produces_mult$: §G+10%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+5%§!"
+	trait_tec_latent_psionic_module_harmony:0 "$MOD_POP_HAPPINESS$: §G+5%§!\n$mod_planet_jobs_produces_mult$: §G+15%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+5%§!"
+	trait_tec_latent_psionic_module_entropy:0 "$MOD_POP_HAPPINESS$: §G+5%§!\n$mod_planet_jobs_produces_mult$: §G+15%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+10%§!"
+
+	trait_tec_psionic_module_fallback:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+25%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+10%§!"
+	trait_tec_psionic_module_harmony:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+30%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+10%§!"
+	trait_tec_psionic_module_entropy:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+30%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+15%§!"
+
+
  # --------------- Psi subtraits
-	# PSIONIC T3
-	trait_tec_covenant_strands:0 "§MEmpowered by the Composer of Strands§!"
-	trait_tec_covenant_eater:0 "§MEmpowered by the Eater of Worlds§!"
-	trait_tec_covenant_whispers:0 "§MEmpowered by the Whispers in the Void§!"
-	trait_tec_covenant_desire:0 "§MEmpowered by the Instrument of Desire§!"
-	trait_tec_covenant_many:0 "§MEmpowered by the Will of the Many§!"
+	# PSIONIC T2
+	trait_tec_covenant_fallback:0 ""
+	trait_tec_covenant_strands:0 "§MEmpowered by the Composer of Strands§!\n"
+	trait_tec_covenant_eater:0 "§MEmpowered by the Eater of Worlds§!\n"
+	trait_tec_covenant_whispers:0 "§MEmpowered by the Whispers in the Void§!\n"
+	trait_tec_covenant_desire:0 "§MEmpowered by the Instrument of Desire§!\n"
+	trait_tec_covenant_many:0 "§MEmpowered by the Will of the Many§!\n"
 
 	# Replaces 
 	trait_tec_psionic_body:0 "Infused Body"
@@ -636,13 +650,23 @@
 
  # --------------- T1
 	# New cyborg
-	mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
+	tec_cybernetic_upkeep_replace:0 "Replaces §Y50%§! of £minerals£ £food£ §YBase§! Upkeep with §Y$tec_loc_energy$§! Upkeep."
+
+	trait_tec_cybernetic_tooltip:0 "$tec_cybernetic_upkeep_replace$\nPop Habitability: §G+20%§!"
+	mod_trait_tec_cybernetic_tooltip:0 "$trait_tec_cybernetic_tooltip$\n[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
 
 	# Modules
 	trait_tec_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
 	trait_tec_cybernetic_module_versatility:0 "$mod_planet_jobs_produces_mult$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
-	trait_tec_cybernetic_module_research:0 "$mod_planet_researchers_all_research_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
-	trait_tec_cybernetic_module_industrial:0 "$mod_planet_industrial_jobs_all_industrial_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+	trait_tec_cybernetic_module_research:0 "$tec_loc_research_resources$ from $tec_loc_jobs$ per $tec_loc_capital_tier$: §G+5%§!\n"
+	trait_tec_cybernetic_module_industrial:0 "$tec_loc_industrial_resources$ from $tec_loc_jobs$ per $tec_loc_capital_tier$: §G+5%§!\n"
+	trait_tec_cybernetic_module_unity:0 "$tec_loc_unity$ from $tec_loc_jobs$ per $tec_loc_capital_tier$: §G+5%§!\n"
+	# Kept these as a reminder of my sins
+		#trait_tec_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
+		#trait_tec_cybernetic_module_versatility:0 "$mod_planet_jobs_produces_mult$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
+		#trait_tec_cybernetic_module_research:0 "$mod_planet_researchers_all_research_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+		#trait_tec_cybernetic_module_industrial:0 "$mod_planet_industrial_jobs_all_industrial_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+		#trait_tec_cybernetic_module_unity:0 "$mod_planet_industrial_jobs_all_industrial_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
 
 	trait_tec_cybernetic_submodule_fallback:0 "$MOD_LEADER_AGE$: §G+25 years§!\n"
 	trait_tec_cybernetic_submodule_lifespan:0 "$trait_tec_cybernetic_submodule_fallback$"
@@ -709,6 +733,8 @@
 	trait_tec_superior_cybernetics_main_desc:0 "§LThis species has reached such an scale of cybernetic modifications that they are completely dependant of them, being perfected and advanced cyborgs, improved with the state-of-the-art mechanical implants.§!\n"
 	leader_trait_tec_superior_cybernetics_main:0 "$trait_tec_superior_cybernetics_main$"
 	leader_trait_tec_superior_cybernetics_main_desc:0 "§LThis Leader has been heavily augmented with extremely sophisticated cybernetic implants serving as direct proxies, relays and receivers to cyber-neural databases across the entire empire territory and far beyond.§!"
+	trait_tec_superior_cybernetics_main_tooltip:0 "$tec_cybernetic_upkeep_replace$\n\nPop Habitability: §G+30%§!"
+	mod_trait_tec_superior_cybernetics_main_tooltip:0 "$trait_tec_superior_cybernetics_main_tooltip$\n[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
 
 	trait_tec_cyborg_specialist:0 "Augmented Devices"
 	trait_tec_cyborg_specialist_desc:0 "§LSophisticated prothesis and devices are integrated in the body of this species, exchanging general effectivity in menial or simple tasks with the performance of top-notch systems and cybernetic augmentations.§!"
@@ -843,12 +869,13 @@
 	#TRAIT_TEC_REPLICANT_LASTGEN_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
 	# Module
-	mod_trait_tec_replicant_main_tooltip:0 "[trait_tec_replicant_main_module_block][trait_tec_replicant_cybernetic_submodule_block_1][trait_tec_replicant_main_submodule_block]"
+	mod_trait_tec_replicant_main_tooltip:0 "$tec_cybernetic_upkeep_replace$\n[trait_tec_replicant_main_module_block][trait_tec_replicant_cybernetic_submodule_block_1][trait_tec_replicant_main_submodule_block]"
 
 	trait_tec_replicant_main_module_fallback:0 "$trait_tec_cybernetic_module_versatility$"
 	trait_tec_replicant_main_module_versatility:0 "$trait_tec_cybernetic_module_versatility$"
 	trait_tec_replicant_main_module_research:0 "$trait_tec_cybernetic_module_research$"
 	trait_tec_replicant_main_module_industrial:0 "$trait_tec_cybernetic_module_industrial$"
+	trait_tec_replicant_main_module_unity:0 "$trait_tec_cybernetic_module_unity$"
 	trait_tec_replicant_main_submodule_upgraded:0 "Habitability: §G+100%§!\nReplicant traits are §EUpgraded§!\n§RCannot reproduce naturally§!\n§GImmortal§!"
 	trait_tec_replicant_main_submodule_standard:0 "Habitability: §G+80%§!\n§GImmortal§!"
 	trait_tec_replicant_main_submodule_combined:0 "Habitability: §G+60%§!\nPop Growth and Assembly Speed: §G+25%§!\nReplicant trait cost: §G-1§!"
@@ -916,13 +943,13 @@
 	leader_trait_tec_biopsionic_main:0 "$trait_tec_biopsionic_main$"
 	leader_trait_tec_biopsionic_main_desc:0 "§LWith a incredible biological and psionic prowess, this Leader shows extreme dextery in near any field, showing unimaginable mental and physical capacities.§!"
 
-	mod_trait_tec_biopsionic_main_tooltip:0 "[trait_tec_biopsionic_main_first_module][trait_tec_biopsionic_main_second_module]"
+	mod_trait_tec_biopsionic_main_tooltip:0 "$MOD_POP_HAPPINESS$: §G+5%§!\n[trait_tec_biopsionic_main_first_module][trait_tec_biopsionic_main_second_module]"
 
 	trait_tec_biopsionic_main_first_module_fallback:0 "$mod_planet_jobs_produces_mult$: §G+15%§!\n"
 	trait_tec_biopsionic_main_first_module_production:0"$mod_planet_jobs_produces_mult$: §G+25%§!\n"
-	trait_tec_biopsionic_main_first_module_growth:0 "$mod_planet_jobs_produces_mult$: §G+15%§!\nPop Growth and Assembly Speed: §G+15%§!\n"
+	trait_tec_biopsionic_main_first_module_pop_upkeep:0 "$mod_planet_jobs_produces_mult$: §G+15%§!\n$mod_planet_pops_upkeep_mult$: §G-20%§!\n"
 
-	trait_tec_biopsionic_main_second_module_fallback:0 "$mod_planet_pops_upkeep_mult$: §G-15%§!\n"
+	trait_tec_biopsionic_main_second_module_fallback:0 "Pop Growth and Assembly Speed: §G+10%§!\n"
 	trait_tec_biopsionic_main_second_module_upkeep:0 "$mod_planet_jobs_upkeep_mult$: §G-10%§!\n"
 	trait_tec_biopsionic_main_second_module_amenities:0 "$MOD_POP_AMENITIES_USAGE_BASE$: §G-15%§!\n"
 
@@ -982,10 +1009,10 @@
 	# 25 years lifespan
 	# psionic produces mult
 	# leader thingie
-	mod_trait_tec_cyberpsionic_main_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1][trait_tec_cybernetic_leader_block]"
+	mod_trait_tec_cyberpsionic_main_tooltip:0 "$tec_cybernetic_upkeep_replace$\n[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1][trait_tec_cybernetic_leader_block]"
 
 	trait_tec_cyberpsionic_main_module_fallback:0 "$mod_planet_psionic_jobs_produces_mult$: §G+10%§!\n"
-	trait_tec_cyberpsionic_main_module_entropy:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n$tec_loc_pop_growth$ and $tec_loc_biological_assembly$: §R-5%§!\n"
+	trait_tec_cyberpsionic_main_module_entropy:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+5%§!\n"
 	trait_tec_cyberpsionic_main_module_harmony:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n"
 
 	trait_tec_cyberpsionic_power:0 "Might Implants"
