--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -19801,42 +19801,42 @@
  mod_planet_tec_occultists_all_industrial_upkeep_add: "$mod_planet_tec_occultists_all_industrial_upkeep_mult$"
  mod_planet_tec_occultists_all_basic_upkeep_add: "$mod_planet_tec_occultists_all_basic_upkeep_mult$"
 
- # planet_tec_druids - £job_druid£ $job_druid_plural$
- mod_base_planet_tec_druids: "£job_druid£ $job_druid_plural$"
+ # planet_tec_druids - £job_tec_druid£ $job_tec_druid_plural$
+ mod_base_planet_tec_druids: "£job_tec_druid£ $job_tec_druid_plural$"
 
- mod_planet_tec_druids_produces_mult: "£job_druid£ $job_druid_plural$ Output"
- mod_planet_tec_druids_upkeep_mult: "£job_druid£ $job_druid_plural$ Upkeep"
+ mod_planet_tec_druids_produces_mult: "£job_tec_druid£ $job_tec_druid_plural$ Output"
+ mod_planet_tec_druids_upkeep_mult: "£job_tec_druid£ $job_tec_druid_plural$ Upkeep"
 
- mod_planet_tec_druids_minerals_produces_mult: "£minerals£ $minerals$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_food_produces_mult: "£food£ $food$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_energy_produces_mult: "£energy£ $energy$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_alloys_produces_mult: "£alloys£ $alloys$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_physics_research_produces_mult: "£physics_research£ $physics_research$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_society_research_produces_mult: "£society_research£ $society_research$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_unity_produces_mult: "£unity£ $unity$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_influence_produces_mult: "£influence£ $influence$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_nanites_produces_mult: "£nanites£ $nanites$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_biomass_produces_mult: "£sr_tec_biomass£ $sr_tec_biomass$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_machine_processing_local_produces_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_machine_processing_empire_produces_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_machine_processing_redirection_produces_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_ai_unobtainium_produces_mult: "£ai_unobtainium£ $ai_unobtainium$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_pop_growth_produces_mult: "$tec_loc_pop_growth$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_biological_assembly_produces_mult: "$tec_loc_biological_assembly$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_assembly_produces_mult: "$tec_loc_assembly$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_all_research_produces_mult: "$tec_loc_research_resources$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_all_basic_produces_mult: "$tec_loc_basic_resources$ from £job_druid£ $job_druid_plural$"
+ mod_planet_tec_druids_minerals_produces_mult: "£minerals£ $minerals$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_food_produces_mult: "£food£ $food$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_energy_produces_mult: "£energy£ $energy$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_alloys_produces_mult: "£alloys£ $alloys$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_physics_research_produces_mult: "£physics_research£ $physics_research$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_society_research_produces_mult: "£society_research£ $society_research$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_unity_produces_mult: "£unity£ $unity$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_influence_produces_mult: "£influence£ $influence$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_nanites_produces_mult: "£nanites£ $nanites$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_biomass_produces_mult: "£sr_tec_biomass£ $sr_tec_biomass$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_machine_processing_local_produces_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_machine_processing_empire_produces_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_machine_processing_redirection_produces_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_ai_unobtainium_produces_mult: "£ai_unobtainium£ $ai_unobtainium$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_pop_growth_produces_mult: "$tec_loc_pop_growth$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_biological_assembly_produces_mult: "$tec_loc_biological_assembly$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_assembly_produces_mult: "$tec_loc_assembly$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_all_research_produces_mult: "$tec_loc_research_resources$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_all_basic_produces_mult: "$tec_loc_basic_resources$ from £job_tec_druid£ $job_tec_druid_plural$"
 
  mod_planet_tec_druids_minerals_produces_add: "$mod_planet_tec_druids_minerals_produces_mult$"
  mod_planet_tec_druids_food_produces_add: "$mod_planet_tec_druids_food_produces_mult$"
@@ -19862,43 +19862,43 @@
  mod_planet_tec_druids_sr_tec_machine_processing_empire_produces_add: "$mod_planet_tec_druids_sr_tec_machine_processing_empire_produces_mult$"
  mod_planet_tec_druids_sr_tec_machine_processing_redirection_produces_add: "$mod_planet_tec_druids_sr_tec_machine_processing_redirection_produces_mult$"
  mod_planet_tec_druids_ai_unobtainium_produces_add: "$mod_planet_tec_druids_ai_unobtainium_produces_mult$"
- mod_planet_tec_druids_amenities_produces_add: "$tec_loc_amenities$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_stability_produces_add: "$tec_loc_stability$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_trade_value_produces_add: "$tec_loc_trade_value$ from £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_edict_funds_produces_add: "$tec_loc_edict_funds$ from £job_druid£ $job_druid_plural$"
+ mod_planet_tec_druids_amenities_produces_add: "$tec_loc_amenities$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_stability_produces_add: "$tec_loc_stability$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_trade_value_produces_add: "$tec_loc_trade_value$ from £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_edict_funds_produces_add: "$tec_loc_edict_funds$ from £job_tec_druid£ $job_tec_druid_plural$"
  mod_planet_tec_druids_biological_assembly_produces_add: "$mod_planet_tec_druids_biological_assembly_produces_mult$"
  mod_planet_tec_druids_assembly_produces_add: "$mod_planet_tec_druids_assembly_produces_mult$"
  mod_planet_tec_druids_all_research_produces_add: "$mod_planet_tec_druids_all_research_produces_mult$"
  mod_planet_tec_druids_all_industrial_produces_add: "$mod_planet_tec_druids_all_industrial_produces_mult$"
  mod_planet_tec_druids_all_basic_produces_add: "$mod_planet_tec_druids_all_basic_produces_mult$"
 
- mod_planet_tec_druids_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_food_upkeep_mult: "£food£ $food$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_energy_upkeep_mult: "£energy£ $energy$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_unity_upkeep_mult: "£unity£ $unity$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_influence_upkeep_mult: "£influence£ $influence$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_biomass_upkeep_mult: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_machine_processing_local_upkeep_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_machine_processing_empire_upkeep_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_sr_tec_machine_processing_redirection_upkeep_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_ai_unobtainium_upkeep_mult: "£ai_unobtainium£ $ai_unobtainium$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of £job_druid£ $job_druid_plural$"
- mod_planet_tec_druids_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of £job_druid£ $job_druid_plural$"
+ mod_planet_tec_druids_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_food_upkeep_mult: "£food£ $food$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_energy_upkeep_mult: "£energy£ $energy$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_unity_upkeep_mult: "£unity£ $unity$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_influence_upkeep_mult: "£influence£ $influence$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_biomass_upkeep_mult: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_machine_processing_local_upkeep_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_machine_processing_empire_upkeep_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_sr_tec_machine_processing_redirection_upkeep_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_ai_unobtainium_upkeep_mult: "£ai_unobtainium£ $ai_unobtainium$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
+ mod_planet_tec_druids_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of £job_tec_druid£ $job_tec_druid_plural$"
 
  mod_planet_tec_druids_minerals_upkeep_add: "$mod_planet_tec_druids_minerals_upkeep_mult$"
  mod_planet_tec_druids_food_upkeep_add: "$mod_planet_tec_druids_food_upkeep_mult$"
@@ -34164,9 +34164,9 @@
  mod_job_gladiator_per_pop: "§G+1§! $job_gladiator$ Job Per $VALUE$ Pops"
  mod_job_gladiator_per_pop_short: "\n§G+1§! £mod_job_gladiator_add£ Per $VALUE$ £pop£"
 
- mod_job_druid_add: "$job_druid$ Jobs"
- mod_job_druid_per_pop: "§G+1§! $job_druid$ Job Per $VALUE$ Pops"
- mod_job_druid_per_pop_short: "\n§G+1§! £mod_job_druid_add£ Per $VALUE$ £pop£"
+ mod_job_tec_druid_add: "$job_tec_druid$ Jobs"
+ mod_job_tec_druid_per_pop: "§G+1§! $job_tec_druid$ Job Per $VALUE$ Pops"
+ mod_job_tec_druid_per_pop_short: "\n§G+1§! £mod_job_tec_druid_add£ Per $VALUE$ £pop£"
 
  mod_job_tec_peasant_add: "$job_tec_peasant$ Jobs"
  mod_job_tec_peasant_per_pop: "§G+1§! $job_tec_peasant$ Job Per $VALUE$ Pops"
