--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -221,7 +221,7 @@
 	concept_tec_decision_tec_environment_engineers_desc: "This decision can be enacted on §YHabitats§! or §YArcology Megastructures§!\n\n$decision_tec_environment_engineers_effects$"
 
 	concept_tec_decision_tec_environment_engineers_breakdown: "$decision_tec_environment_engineers$ Effect"
-	concept_tec_decision_tec_environment_engineers_breakdown_desc: "Habitats:\n- Get the §Y$pm_tec_engineered_habitat$§! modifiers.\n- Get 2 random special habitat deposits\n- If the system in which the habitat is placed has precursor activity, the habitat gets the §Y$d_tectec_aqua_drone_engineered_precursor$§! deposit\n\nElysiums:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get two §Y$d_tec_eco_terraformed_ring$§! deposits\n- Get 2 random arcology deposits\n\nRingworld or Modded Space Arcologies:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get the §Y$d_tec_eco_terraformed_ring$§! deposit\n- Get 2 random arcology deposits"
+	concept_tec_decision_tec_environment_engineers_breakdown_desc: "Habitats:\n- Get the §Y$pm_tec_engineered_habitat$§! modifiers.\n- Get 2 random special habitat deposits\n- If the system in which the habitat is placed has precursor activity, the habitat gets the §Y$d_tec_engineered_precursor$§! deposit\n\nElysiums:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get two §Y$d_tec_eco_terraformed_ring$§! deposits\n- Get 2 random arcology deposits\n\nRingworld or Modded Space Arcologies:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get the §Y$d_tec_eco_terraformed_ring$§! deposit\n- Get 2 random arcology deposits"
 
 	concept_tec_decision_tec_environment_fix: "$decision_tec_environment_fix$"
 	concept_tec_decision_tec_environment_fix_icon: "£decision£ $decision_tec_environment_fix$"
@@ -234,6 +234,11 @@
 	concept_tec_decision_tec_environment_preserve: "$decision_tec_environment_preserve$"
 	concept_tec_decision_tec_environment_preserve_icon: "£decision£ $decision_tec_environment_preserve$"
 	concept_tec_decision_tec_environment_preserve_desc: "$decision_tec_environment_preserve_effects$"
+
+	concept_tec_decision_tec_environment_overstrip: "Overstripping Decisions"
+	concept_tec_decision_tec_environment_overstrip_icon: "£decision£ Overstripping Decisions"
+	concept_tec_decision_tec_environment_overstrip_desc: "£decision£ Overstripping decisions allow exchanging some natural Resource production capacities to boost a specific resource."
+
 # /
 
 # Jobs
@@ -402,10 +407,52 @@
 	concept_tec_specialist_job_tec_minor_occultist_plural_icon: "£job_tec_minor_occultist£ $job_tec_minor_occultist_plural$"
 	concept_tec_specialist_job_tec_minor_occultist_desc: "§L$job_tec_minor_occultist_desc$§!\n\n$job_tec_minor_occultist_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_necromancer: "$job_necromancer$"
+	concept_tec_specialist_job_necromancer_alias: "$job_necromancer$"
+	concept_tec_specialist_job_necromancer_icon: "£job_necromancer£ $job_necromancer$"
+	concept_tec_specialist_job_necromancer_plural: "$job_necromancer_plural$"
+	concept_tec_specialist_job_necromancer_plural_icon: "£job_necromancer£ $job_necromancer_plural$"
+	concept_tec_specialist_job_necromancer_desc: "§L$job_necromancer_desc$§!\n\n$job_necromancer_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_death_priest: "$job_death_priest$"
+	concept_tec_specialist_job_death_priest_alias: "$job_death_priest$"
+	concept_tec_specialist_job_death_priest_icon: "£job_death_priest£ $job_death_priest$"
+	concept_tec_specialist_job_death_priest_plural: "$job_death_priest_plural$"
+	concept_tec_specialist_job_death_priest_plural_icon: "£job_death_priest£ $job_death_priest_plural$"
+	concept_tec_specialist_job_death_priest_desc: "§L$job_death_priest_desc$§!\n\n$job_death_priest_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_bath_attendant: "$job_bath_attendant$"
+	concept_tec_specialist_job_bath_attendant_alias: "$job_bath_attendant$"
+	concept_tec_specialist_job_bath_attendant_icon: "£job_bath_attendant£ $job_bath_attendant$"
+	concept_tec_specialist_job_bath_attendant_plural: "$job_bath_attendant_plural$"
+	concept_tec_specialist_job_bath_attendant_plural_icon: "£job_bath_attendant£ $job_bath_attendant_plural$"
+	concept_tec_specialist_job_bath_attendant_desc: "§L$job_bath_attendant_desc$§!\n\n$job_bath_attendant_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_scavenger: "$job_tec_scavenger$"
+	concept_tec_specialist_job_tec_scavenger_alias: "$job_tec_scavenger$"
+	concept_tec_specialist_job_tec_scavenger_icon: "£job_tec_scavenger£ $job_tec_scavenger$"
+	concept_tec_specialist_job_tec_scavenger_plural: "$job_tec_scavenger_plural$"
+	concept_tec_specialist_job_tec_scavenger_plural_icon: "£job_tec_scavenger£ $job_tec_scavenger_plural$"
+	concept_tec_specialist_job_tec_scavenger_desc: "§L$job_tec_scavenger_desc$§!\n\n$job_tec_scavenger_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+
+
+	concept_tec_specialist_job_bath_attendant_hive: "$job_bath_attendant_hive$"
+	concept_tec_specialist_job_bath_attendant_hive_alias: "$job_bath_attendant_hive$"
+	concept_tec_specialist_job_bath_attendant_hive_icon: "£job_bath_attendant_hive£ $job_bath_attendant_hive$"
+	concept_tec_specialist_job_bath_attendant_hive_plural: "$job_bath_attendant_hive_plural$"
+	concept_tec_specialist_job_bath_attendant_hive_plural_icon: "£job_bath_attendant_hive£ $job_bath_attendant_hive_plural$"
+	concept_tec_specialist_job_bath_attendant_hive_desc: "§L$job_bath_attendant_hive_desc$§!\n\n$job_bath_attendant_hive_effect_desc$\n\nStratum: §Y$pop_cat_complex_drone$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_bath_attendant_machine: "$job_bath_attendant_machine$"
+	concept_tec_specialist_job_bath_attendant_machine_alias: "$job_bath_attendant_machine$"
+	concept_tec_specialist_job_bath_attendant_machine_icon: "£job_bath_attendant_machine£ $job_bath_attendant_machine$"
+	concept_tec_specialist_job_bath_attendant_machine_plural: "$job_bath_attendant_machine_plural$"
+	concept_tec_specialist_job_bath_attendant_machine_plural_icon: "£job_bath_attendant_machine£ $job_bath_attendant_machine_plural$"
+	concept_tec_specialist_job_bath_attendant_machine_desc: "§L$job_bath_attendant_machine_desc$§!\n\n$job_bath_attendant_machine_effect_desc$\n\nStratum: §Y$pop_cat_complex_drone$§!\nProduces:\n\n"
 
  # /
  # Worker
-
 	concept_tec_worker_job_tec_peasant: "$job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_alias: "$job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_icon: "£job_slave_toiler£ $job_tec_peasant$"
@@ -413,6 +460,33 @@
 	concept_tec_worker_job_tec_peasant_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
 	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
+	concept_tec_worker_job_tec_necromonger: "$job_tec_necromonger$"
+	concept_tec_worker_job_tec_necromonger_alias: "$job_tec_necromonger$"
+	concept_tec_worker_job_tec_necromonger_icon: "£job_tec_necromonger£ $job_tec_necromonger$"
+	concept_tec_worker_job_tec_necromonger_plural: "$job_tec_necromonger_plural$"
+	concept_tec_worker_job_tec_necromonger_plural_icon: "£job_tec_necromonger£ $job_tec_necromonger_plural$"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_necromonger_desc$§!\n\n$job_tec_necromonger_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_mortal_initiate: "$job_mortal_initiate$"
+	concept_tec_worker_job_mortal_initiate_alias: "$job_mortal_initiate$"
+	concept_tec_worker_job_mortal_initiate_icon: "£job_mortal_initiate£ $job_mortal_initiate$"
+	concept_tec_worker_job_mortal_initiate_plural: "$job_mortal_initiate_plural$"
+	concept_tec_worker_job_mortal_initiate_plural_icon: "£job_mortal_initiate£ $job_mortal_initiate_plural$"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_mortal_initiate_desc$§!\n\n$job_mortal_initiate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_pleasure_giver: "$job_tec_pleasure_giver$"
+	concept_tec_worker_job_tec_pleasure_giver_alias: "$job_tec_pleasure_giver$"
+	concept_tec_worker_job_tec_pleasure_giver_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
+	concept_tec_worker_job_tec_pleasure_giver_plural: "$job_tec_pleasure_giver_plural$"
+	concept_tec_worker_job_tec_pleasure_giver_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_druid: "$job_tec_druid$"
+	concept_tec_worker_job_tec_druid_alias: "$job_tec_druid$"
+	concept_tec_worker_job_tec_druid_icon: "£job_tec_druid£ $job_tec_druid$"
+	concept_tec_worker_job_tec_druid_plural: "$job_tec_druid_plural$"
+	concept_tec_worker_job_tec_druid_plural_icon: "£job_tec_druid£ $job_tec_druid_plural$"
+	concept_tec_worker_job_tec_druid_desc: "§L$job_tec_druid_desc$§!\n\n$job_tec_druid_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
  # /
  # Unsorted
 	concept_tec_job_angler: "$job_angler$"
